--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Eve Outbound Dialing - Live Dashboard</title>
+  <title>Eve Dashboard - Outbound Dialing</title>
   <style>
     :root {
       --bg: #071025;
